# logxide

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENT.md  BENCHMARK_SUMMARY.md  CHANGELOG.md  CODE_FIXES_SUMMARY.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  FEATURE_ANALYSIS_SUMMARY.md  FEATURE_ANALYSIS_SUMMARY_KR.md  LOGGER_HANDLERS_DESIGN.md  MUTEX_POISONING_STRATEGY.md  PYPI_PREPARATION.md  PYTHON_LOGGING_FEATURE_COMPARISON.md  README.md  RUST_HANDLERS.md  RUST_IMPLEMENTATION_ANALYSIS.md  TESTING_LIMITATIONS.md  USAGE.md  benchmark_results_2025-07-10-203237.txt  benchmark_results_2025-07-10-203300.txt  benchmark_results_2025-07-10-203330.txt  idea.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  python_benchmark_results_2025-07-10-203134.txt  ruff.toml  rust-toolchain.toml  standalone_test.py  test.db  test_examples.py  test_integration_examples.py  test_thread_vs_logger_name.py  tmp_test_intercept.py
.github/workflows/: benchmark.yml  ci.yml  deploy_docs.yml  publish.yml  sentry-integration-test.yml
benchmark/: README.md  _bench_common.py  basic_handlers_benchmark.py  compare_loggers.py  gil_benchmark.py  logger_comparison_file_io_20251230_165703.json  logxide_vs_picologging.py  perf_micro.py  perf_vs_stdlib.py  py_benchmark.py  real_handlers_comparison.py  rs_benchmark.py
docs/: architecture.md  benchmarks.md  comparison-picologging.md  comparison-stdlib.md  comparison-structlog.md  comparison.md  compatibility.md  development.md  index.md  installation.md  integration.md  performance-bottleneck-report-2026-07-13.md  production.md  reference.md  sentry.md  testing.md  third-party-compatibility.md  usage.md
docs/blog-preview/: part1.md  part2.md
docs/integrations/: django.md  fastapi.md  flask.md  index.md  sentry.md
examples/: README.md  basic_usage.py  debug_format.py  debug_sqlalchemy.py  demo.py  demo_actual_libraries.py  demo_final.py  demo_http_request.py  demo_quick.py  demo_real_libraries.py  demo_simple.py  demo_success.py  demo_working.py  django_integration.py  drop_in_replacement.py  fastapi_advanced.py  fastapi_demo.py  flask_integration.py  format_detailed.py  format_json.py  format_minimal.py  format_production.py  format_simple.py  format_threaded.py  minimal_dropin.py  sentry_integration.py  simple_demo.py  test_formatting.py  test_sqlalchemy_simple.py  third_party_integration.py
instance/: flask_demo.db
logxide/: __init__.py  __init__.pyi  compat_functions.py  compat_handlers.py  config.py  fast_logger_wrapper.py  handlers.py  interceptor.py  logger_wrapper.py  module_system.py  production.py  pytest_plugin.py  sentry_integration.py  testing.py
src/: concurrency_pure.rs  config.rs  core.rs  core_pure.rs  fast_logger.rs  fast_python_interface.rs  filter.rs  formatter.rs  formatter_pure.rs  globals.rs  handler.rs  lib.rs  lib_complex.rs  py_handlers.rs  py_logger.rs  string_cache.rs
tests/: README.md  conftest.py  debug_format2.py  format_debug.py  test_basic_logging.py  test_caller_info_scope.py  test_caplog_override.py  test_color_formatter.py  test_compat_functions.py  test_compatibility.py  test_config.py  test_doc_codeblocks.py  test_examples.py  test_extra_parameters.py  test_formatter_planning.py  test_gil_scaling.py  test_handler_output.py  test_handler_routing.py  test_http_auth.py  test_http_handler_features.py  test_integration.py  test_integration_examples.py  test_interceptor.py  test_logxide_caplog_final.py  test_logxide_testing.py  test_native_fastpath.py  test_optimizations.py  test_overflow_flush.py  test_production_features.py  test_python315_compat.py  test_rust_handlers.py  test_sentry_integration.py  test_sentry_integration_real.py  test_stdlib_handler_compat.py  test_timed_rotation.py
