[package]
name = "logxide"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "logxide"
crate-type = ["cdylib"]

[features]
default = []
# Enable Python handler support (deprecated - use Rust native handlers)
python-handlers = []

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
once_cell = "1"
async-trait = "0.1"
chrono = "0.4"
regex = "1.5"
parking_lot = "0.12"
dashmap = "6.0"
futures = "0.3"

[lints.clippy]
# Allow certain patterns that are common in PyO3 bindings
too_many_arguments = "allow"
module_name_repetitions = "allow"
redundant_closure = "allow"
missing_const_for_thread_local = "allow"
while_let_loop = "allow"
useless_conversion = "allow"
redundant_field_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# We already handle these with #[allow] attributes in the code
