[package]
name = "logxide"
version = "0.1.21"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "logxide"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3

[features]
default = []

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
once_cell = "1"
arc-swap = "1.7"
itoa = "1"

chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6.0"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }
crossbeam-channel = "0.5"

prost = "0.13"
opentelemetry-proto = { version = "0.28", features = ["tonic", "logs"] }

[lints.clippy]
# Allow certain patterns that are common in PyO3 bindings
too_many_arguments = "allow"
module_name_repetitions = "allow"
redundant_closure = "allow"
missing_const_for_thread_local = "allow"
while_let_loop = "allow"
useless_conversion = "allow"
redundant_field_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# We already handle these with #[allow] attributes in the code
